fastmetrics-derive/tests/ui/fail/label_set/non_struct.stderr
error: #[derive(LabelSet)] can only be derived for structs with named fields.
 --> tests/ui/fail/label_set/non_struct.rs:5:6
  |
5 | enum NotAStruct {
  |      ^^^^^^^^^^
